# Credence-Contracts

./: .gitignore  BATCH_ATOMICITY_SUMMARY.md  Cargo.toml  PR_CREATION_INSTRUCTIONS.md  PR_DESCRIPTION.md  PR_DESCRIPTION_EVENT_INDEXING.md  PR_INSTRUCTIONS_EVENT_INDEXING.md  README.md  SAFE_ERC20_MIGRATION_SUMMARY.md  SECURITY.md  TREASURY_GUARDRAILS_SUMMARY.md  build_output.txt  gas-report.txt  test_supply_cap.rs
.github/workflows/: contracts-lints.yml  contracts-tests.yml  coverage.yml
contracts/admin/: Cargo.toml
contracts/admin/src/: lib.rs  pausable.rs  (+7 more)
contracts/arbitration/: Cargo.toml
contracts/credence_bond/: Cargo.toml  PRESERVATION_TESTS_SUMMARY.md  REENTRANCY_BUG_EXPLORATION.md
contracts/credence_bond/docs/: events.md
contracts/credence_bond/src/: access_control.rs  batch.rs  claims.rs  cooldown.rs  early_exit_penalty.rs  emergency.rs  events.rs  evidence.rs  fees.rs  governance_approval.rs  lib.rs  liquidation_scanner.rs  math.rs  nonce.rs  normalization.rs  parameters.rs  pausable.rs  rolling_bond.rs  safe_token.rs  safe_token_tests.rs  same_ledger_liquidation_guard.rs  slash_history.rs  slashing.rs  status_snapshot.rs  test.rs  test_access_control.rs  test_attestation.rs  test_attestation_types.rs  test_batch.rs  test_borrow_freeze.rs  test_bps_denominator.rs  test_claim_pagination.rs  test_cooldown.rs  test_create_bond.rs  test_decimals.rs  test_duration_validation.rs  test_early_exit_penalty.rs  test_emergency.rs  test_events.rs  test_events_v2.rs  (+35 more)
contracts/credence_bond/src/fuzz/: mod.rs  test_bond_fuzz.rs  test_reward_accrual_fuzz.rs
contracts/credence_bond/src/integration/: test_bond_lifecycle.rs  test_governance.rs
contracts/credence_bond/src/security/: test_arithmetic.rs
contracts/credence_bond/src/types/: attestation.rs
contracts/credence_bond/tests/: test_access_control.rs  test_fee_on_transfer_rejection.rs
contracts/credence_delegation/: Cargo.toml
contracts/credence_multisig/: Cargo.toml
contracts/credence_multisig/src/: lib.rs  multisig.rs  pausable.rs  test_multisig.rs  test_pausable.rs
contracts/credence_registry/: Cargo.toml
contracts/credence_registry/src/: lib.rs  test.rs  test_idempotency.rs  test_interface.rs  test_pausable.rs
contracts/credence_treasury/: Cargo.toml
contracts/credence_treasury/src/: lib.rs  receiver.rs  test_flash_loan.rs  test_pausable.rs  test_slippage_adversarial.rs  test_treasury.rs  test_withdrawal_guardrails.rs  treasury.rs
contracts/dispute_resolution/: Cargo.toml  dispute.md
contracts/dispute_resolution/src/: lib.rs  pausable.rs  test.rs  test_gas.rs  test_pausable.rs
contracts/fixed_duration_bond/: Cargo.toml
contracts/fixed_duration_bond/src/: errors.rs  lib.rs  test_pausable.rs  tests.rs  types.rs  validation.rs
contracts/templates/: Cargo.toml  accrual_helper_template.rs  accrual_tests_template.rs
contracts/timelock/: Cargo.toml
contracts/timelock/src/: lib.rs  pausable.rs  test_pausable.rs  test_timelock.rs  timelock.rs
docs/: EVENT_INDEXING_MIGRATION.md  arbitration.md  architecture.md  attestations.md  batch-operations.md  bond-market-activation-checklist.md  credence-bond.md  credence-delegation.md  credence-timelock.md  decimal-handling.md  delegation.md  dispute-resolution.md  emergency.md  errors.md  event-indexing.md  fixed-duration-bond.md  known-simplifications.md  registry.md  security.md  slashing.md  status-snapshot.md  supported-tokens.md  templates.md  testing.md  timelock.md  token-integration.md  treasury.md
(+15 files in other folders)
