[package]
name = "credence_bond"
version = "0.1.0"
edition = "2021"
description = "Credence identity bond contract — lock USDC, track duration, slashing"

[lib]
crate-type = ["rlib"]

[dependencies]
credence_math = { path = "../credence_math" }
credence_errors = { path = "../credence_errors" }
soroban-sdk = { version = "22.0", features = ["testutils"] }
