[package]
name = "credence_multisig"
version = "0.1.0"
edition = "2021"
description = "Credence multi-signature contract — governance and administrative actions with configurable threshold"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0"
credence-errors = { path = "../credence_errors" }

[dev-dependencies]
soroban-sdk = { version = "22.0", features = ["testutils"] }
