[package]
name = "dispute_resolution"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "23.0", features = [] }
credence_errors = { path = "../credence_errors" }

[dev-dependencies]
soroban-sdk = { version = "23.0", features = ["testutils"] }
